tests/ui/parser/import-glob-path.rs
use foo::*::bar //~ ERROR expected `;`, found `::`
